[package]
name = "spl-token-COD-sc1"
version = "1.0.0"
authors = ["Sceptre @Solana"]
repository = "https://github.com/solana-labs/solana-program-library"
exclude = ["js/**"]

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
solana-program = "1.7.11"
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
